Improve neural nets a bit
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/formation.cls
+++ b/formation.cls
@@ -199,6 +199,7 @@
   rectangle,
   rounded corners=3pt,
   fill=red!15,
+  line width=0.5mm,
   draw}}
 \tikzset{hdecoder/.style={hencoder,fill=green!15}}
 \tikzset{input/.style={hencoder,fill=yellow!15}}
