--- a/shared/latex/neural-networks/gradient-descent.tex
+++ b/shared/latex/neural-networks/gradient-descent.tex
@@ -13,46 +13,48 @@
 \end{frame}
 
 \begin{frame}{Algorithme}
-  1 - initialisation aléatoire du modèle
-  \newline
-  2 - Tant que(critère arret == 0)
-  \begin{itemize}
-  \item Selection aléatoire d'un \textbf{batch} de données
-  \item \textbf{Forward} : Passe avant du \textbf{batch} dans le modèle
-  \item Calcul de l'erreur par rapport aux sorties attendues
-  \item \textbf{Backward} : Rétropropagation du gradient de l'erreur en fonction des paramèrtres dans le modèle (mise à jour du modèle)
-  \item Calcul critère arret
-  \end{itemize}
+  \begin{enumerate}[<+->]
+    \item Initialisation aléatoire du modèle
+    \item Tant qu'aucun critère d'arrêt n'est satisfait~:
+      \begin{itemize}
+        \item Selection aléatoire d'un \textbf{batch} de données
+        \item \textbf{Forward} : Passe avant du \textbf{batch} dans le modèle
+        \item Calcul de l'erreur par rapport aux sorties attendues
+        \item \textbf{Backward} : Rétropropagation du gradient de l'erreur en fonction des paramètres dans le modèle (mise à jour du modèle)
+        \item Calcul des critères d'arrêt
+      \end{itemize}
+  \end{enumerate}
 \end{frame}
 
 
-\begin{frame}{Dérivation}
+\begin{frame}{Exemple de dérivation --- Régression linéaire}
   \begin{minipage}[l]{0.49\linewidth}
-    \begin{center}
-      $\boxed{y = a.x+b}$ \\
-    \end{center}
-    $E_{\Omega} = \frac{1}{2n}\underset{i=[1..n]}{\sum}( \hat{y_i} - y_i )^2$ \\
-    $E_{\Omega} = \frac{1}{2n}\underset{i=[1..n]}{\sum}( \hat{y_i} - (a.x_i+b) )^2$ \\
-    ... \\
-    $\frac{\partial{E_{\Omega}}}{\partial{a}} = \frac{1}{n}\sum_{i=[1..n]}(a.x_i+b - \hat{y_i}).x$ \\
-    $\frac{\partial{E_{\Omega}}}{\partial{b}} = \frac{1}{n}\sum_{i=[1..n]}(a.x_i+b - \hat{y_i})$ \\
+    \begin{align*}
+      E_\Omega & = \frac{1}{2n} \sum_{i=1}^n( \hat{y_i} - y_i )^2 \\
+      E_\Omega & = \frac{1}{2n}\sum_{i=1}^n( \hat{y_i} - (ax_i + b) )^2 \\
+      & ... \\
+      \frac{\partial E_\Omega}{\partial a} & = \frac{1}{n}\sum^n_{i=1}(ax_i + b - \hat{y_i})x \\
+      \frac{\partial E_\Omega}{\partial b} & = \frac{1}{n}\sum^n_{i=1}(ax_i + b - \hat{y_i}) \\
+    \end{align*}
   \end{minipage}\hfill
   \begin{minipage}[c]{0.49\linewidth}
-    $\;$ \\
-    $\;$ \\
-    $\;$ \\
     \begin{center}
-      $\boxed{U^{2\;\prime}=2U\;'*U}$
+      $\boxed{y = ax+b}$
+    \end{center}
+
+    \begin{center}
+      $\boxed{U^{2\;\prime}=2U' \times U}$
+    \end{center}
+    \vfill
+    \begin{center}
+      \textbf{Mise à jour}
+
+      $a \leftarrow a - \gamma\frac{\partial{E_{\Omega}}}{\partial{a}}$ \\
+      $b \leftarrow b - \gamma\frac{\partial{E_{\Omega}}}{\partial{b}}$ \\
+      $\;$ \\
+      où $0 < \gamma < 1$ (pas d'apprentissage)
     \end{center}
   \end{minipage}\hfill
-  \begin{center}
-    \textbf{M.A.J :} \\
-    $\;$ \\
-    $a \leftarrow a - \gamma.\frac{\partial{E_{\Omega}}}{\partial{a}}$ \\
-    $b \leftarrow b - \gamma.\frac{\partial{E_{\Omega}}}{\partial{b}}$ \\
-    $\;$ \\
-    où $1 > \gamma > 0$ (learning rate)
-  \end{center}
 \end{frame}
 
 \begin{frame}{Exemple}
