--- a/shared/latex/machine-learning/data-preparation.tex
+++ b/shared/latex/machine-learning/data-preparation.tex
@@ -8,7 +8,7 @@
   \begin{itemize}[<+->]
   \item \red{variables confondantes} (Ex : ``obésité'' dans la corrélation entre ``conso. viande'' et ``cancer colon'')
   \item \red{biais statistiques}
-    \begin{itemize}[<+->]
+    \begin{itemize}
     \item sélection, autosélection
     \item mesure
     \item attrition
