--- a/shared/latex/machine-learning/intro.tex
+++ b/shared/latex/machine-learning/intro.tex
@@ -1,15 +1,12 @@
-\begin{frame}
-  \frametitle{Un domaine vaste}
+\begin{frame}{Un domaine vaste}
   \imgtw{data-science}
 \end{frame}
 
-\begin{frame}
-  \frametitle{Hiérarchie des noms}
+\begin{frame}{Hiérarchie des noms}
   \imgth[0.8]{ia-ml-deep}
 \end{frame}
 
-\begin{frame}
-  \frametitle{Machine Learning}
+\begin{frame}{Machine Learning}
   Nouvelle manière d'aborder la \textbf{conception logicielle}.
   \vfill
   \begin{block}{Changement de paradigme}
@@ -17,24 +14,20 @@
   \end{block}
 \end{frame}
 
-\begin{frame}
-  \frametitle{Ingénierie}
+\begin{frame}{Ingénierie}
   \imgtw[0.8]{ml-craftmanship}
 \end{frame}
 
-\begin{frame}
-  \frametitle{Matière première : les données}
+\begin{frame}{Matière première : les données}
   \imgtw[0.8]{variables}
 \end{frame}
 
-\begin{frame}
-  \frametitle{Grandes familles}
+\begin{frame}{Grandes familles}
 
   Apprentissage \textbf{supervisé} ou \textbf{non-supervisé}, voire \textbf{par renforcement} ?
 \end{frame}
 
-\begin{frame}
-  \frametitle{Apprentissage non-supervisé}
+\begin{frame}{Apprentissage non-supervisé}
   Faire émerger des profils, des groupes
   \vfill
   \begin{exampleblock}{Exemple}
@@ -42,13 +35,11 @@
   \end{exampleblock}
 \end{frame}
 
-\begin{frame}
-  \frametitle{Apprentissage supervisé}
+\begin{frame}{Apprentissage supervisé}
   \textbf{Prédire} une valeur numérique (\textbf{régression}) ou l'appartenance à une classe (\textbf{Classification}).
 \end{frame}
 
-\begin{frame}
-  \frametitle{Apprentissage par Renforcement}
+\begin{frame}{Apprentissage par Renforcement}
   Apprendre une \textbf{stratégie} efficace dans un \textbf{univers} où les \textbf{actions} fournissent des \textbf{récompenses} (possiblement négatives)
   \vfill
   \begin{minipage}[l]{0.39\linewidth}
@@ -59,43 +50,36 @@
   \end{minipage}
 \end{frame}
 
-\begin{frame}
-  \frametitle{Exemple: Régression linéaire}
+\begin{frame}{Exemple --- Régression linéaire}
   Prédire une valeur en fonction d'une autre
 
   \imgth[0.7]{regression-line-1}
 \end{frame}
 
-\begin{frame}
-  \frametitle{Exemple : Régression linéaire multiple}
+\begin{frame}{Exemple --- Régression linéaire multiple}
   Prédire une valeur en fonction de plusieurs autres
 
   \imgth[0.8]{regression-hyperplan}
 \end{frame}
 
-\begin{frame}
-  \frametitle{Exemple : Classification avec des réseaux à convolutions}
+\begin{frame}{Exemple --- Classification avec des réseaux à convolutions}
   
   \imgtw{cnn-schema}
 \end{frame}
 
-\begin{frame}
-  \frametitle{Exemple : Classification avec des réseaux à convolutions}
+\begin{frame}{Exemple --- Classification avec des réseaux à convolutions}
   \imgtw[0.8]{caltech256}
 \end{frame}
 
-\begin{frame}
-  \frametitle{Exemple : Apprentissage par renforcement}
+\begin{frame}{Exemple --- Apprentissage par renforcement}
   \imgtw[0.8]{alphazero}
 \end{frame}
 
-\begin{frame}
-  \frametitle{Topologie du domaine}
+\begin{frame}{Topologie du domaine}
   \imgtw[0.8]{ml-illustration}
 \end{frame}
 
-\begin{frame}
-  \frametitle{Points de vue}
+\begin{frame}{Points de vue}
   Beaucoup de façons de voir le machine learning. Basées sur :
   \begin{itemize}[<+->]
   \item les paradigmes (supervisé, non supervisé, renforcement, en
@@ -111,8 +95,7 @@
   \onslide<+->{→ Domaine \textbf{extrêmement} vaste.}
 \end{frame}
 
-\begin{frame}
-  \frametitle{Choisir la bonne facette}
+\begin{frame}{Choisir la bonne facette}
   Critères pour s'orienter dans les approches de machine learning:
   \begin{itemize}[<+->]
   \item quantité de données à disposition
@@ -125,8 +108,7 @@
   \end{itemize}
 \end{frame}
 
-\begin{frame}
-  \frametitle{Conclusion}
+\begin{frame}{Conclusion}
   \begin{itemize}
   \item le machine learning est un champ vaste.
   \item il existe sûrement un modèle/paradigme pour vos besoins
@@ -134,8 +116,7 @@
   \end{itemize}
 \end{frame}
 
-\begin{frame}
-  \frametitle{Discussion}
+\begin{frame}{Discussion}
   \begin{itemize}
   \item à quelles données allez-vous appliquer le machine learning ? À
     quels besoins ?
