--- a/shared/latex/machine-learning/math-stats.tex
+++ b/shared/latex/machine-learning/math-stats.tex
@@ -20,7 +20,7 @@
   \begin{itemize}
   \item les données \textbf{doivent être issues d'une même loi}
   \item chaque échantillon doit être \textbf{indépendant} des autres
-  \item \red{pas évident en pratique !} \pause \green{Pourquoi ?}
+  \item \red{pas évident en pratique !} \visible<+(1)->{\question{Pourquoi ?}}
   \end{itemize}
 \end{frame}
 
@@ -65,7 +65,7 @@
 
   Déclinable en quantile de taille arbitraire (décile, percentile).
 
-  \pause \green{Que veut dire être dans le 95\ieme{} percentile ?}
+  \question{Que veut dire être dans le 95\ieme{} percentile ?}
 \end{frame}
 
 \begin{frame}[fragile]
@@ -100,7 +100,7 @@
     \corr(X, Y) = \frac{\cov(X, Y)}{\sigma_X\sigma_Y}
   \]
 
-  \green{Intérêt ?} \pause Pas d'unité.
+  \question{Intérêt ?}{Pas d'unité.}
 \end{frame}
 
 \begin{frame}
