Use deckz 9 & some DPL work
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/shared/latex/natural-language-processing/preprocessing.tex
+++ b/shared/latex/natural-language-processing/preprocessing.tex
@@ -12,11 +12,11 @@
     \item Réseaux sociaux
     \end{itemize}
   \end{itemize}
-  Une source $\Rightarrow$ un «~web scrapper~»
+  Une source $\Rightarrow$ un «~web scraper~»
 \end{frame}
 
 \begin{frame}{Tokenisation}
-  Séparer une chaîne de caractères en token n'est pas trivial :
+  Séparer une chaîne de caractères en tokens n'est pas trivial :
 
   \begin{center}
     Le Dr. Pond èleve des poules. L'éleveur les sur-exploite.
@@ -38,9 +38,10 @@
 \end{frame}
 
 \begin{frame}{Lemmatisation}
-  Exprimer les mots sous leur forme canonique : \\
+  Exprimer les mots (ou groupes de mots) sous une forme canonique : \\
 
-  \begin{tabular}{ll}
+  \centering
+  \begin{tabular}{cc}
     \textbf{Mot} & \textbf{Lemme} \\
     jouant & jouer \\
     ont été jouées & jouer \\
