--- a/shared/latex/natural-language-processing/vectors.tex
+++ b/shared/latex/natural-language-processing/vectors.tex
@@ -39,13 +39,14 @@
 \end{frame}
 
 \begin{frame}{Analyse sémantique latente}
-  Latent Semantic Analysis (LSA). Famille algorithmique des modèles thématiques (topic models).
+  Famille algorithmique des modèles thématiques (topic models)~:
 
-  $\approx$ PCA sur la matrice des documents, de telle sorte qu'on obtient des relations entre les mots.
+  \begin{itemize}[<+(1)->]
+    \item $\approx$ PCA sur la matrice des documents $\rightarrow$ relations entre les mots
+    \item Composantes principales $\approx$ topics
+  \end{itemize}
 
-  Les directions principales de projection nous donnent des «~concepts~» généraux, ou topics, liés au langage.
-
-  Par exemple~: un axe correspond au champ lexical du sport, un autre à celui de l'économie, etc.
+  \onslide<+(1)->{Par exemple~: un axe correspond au champ lexical du sport, un autre à celui de l'économie, etc.}
 \end{frame}
 
 \begin{frame}
