--- a/shared/latex/neural-networks/regularisation.tex
+++ b/shared/latex/neural-networks/regularisation.tex
@@ -7,7 +7,7 @@
   Coût supplémentaire pour l'utilisation des paramètres dans la fonction de perte~:
 
   \[
-  Loss = Loss + \lambda\sum||w||^2
+  \text{perte} = \text{perte} + \lambda\sum||w||^2
   \]
 
   où $\lambda$ est un hyperparamètre
