--- a/shared/latex/sequential-data/sequential-data.tex
+++ b/shared/latex/sequential-data/sequential-data.tex
@@ -1,6 +1,6 @@
 \begin{frame}{Introduction}
   \begin{center}
-    Datasets dont les instances sont des séquences de feature(s)
+    Datasets dont les instances sont des séquences de caractéristique(s).
   \end{center}
 \end{frame}
 
