--- a/shared/latex/tools/intro.tex
+++ b/shared/latex/tools/intro.tex
@@ -1,6 +1,6 @@
 \begin{frame}{Intérêt de l'outillage}
   Le ML est à la croisée des mathématiques et de l'\textbf{ingénierie}~:
-  \begin{itemize}[<+->]
+  \begin{itemize}[<+(1)->]
     \item Gérer des expérimentations (modèles, données)
     \item Stocker des quantités importantes de données
     \item Pouvoir calculer en parallèle
