--- a/shared/latex/tools/ml-dl.tex
+++ b/shared/latex/tools/ml-dl.tex
@@ -1,14 +1,14 @@
 \begin{frame}{Librairies fondamentales}
   Utilisées dans tous les frameworks Python~:
-  \begin{itemize}[<+->]
-    \item \bluelink{https://pandas.pydata.org/}{pandas}
-    \item \bluelink{https://numpy.org/}{NumPy}
+  \begin{itemize}[<+(1)->]
+    \item \bluelink{https://pandas.pydata.org/docs/getting_started/intro_tutorials/01_table_oriented.html}{pandas}
+    \item \bluelink{https://numpy.org/devdocs/user/absolute_beginners.html\#more-useful-array-operations}{NumPy}
   \end{itemize}
 \end{frame}
 
 \begin{frame}{Machine Learning tabulaire}
   \begin{itemize}[<+->]
-    \item \bluelink{https://scikit-learn.org/}{scikit-learn}
+    \item \bluelink{https://scikit-learn.org/stable/modules/classes.html}{scikit-learn}
     \item \bluelink{https://xgboost.readthedocs.io/}{XGBoost}
   \end{itemize}
 \end{frame}
@@ -24,8 +24,8 @@
 
 \begin{frame}{Deep Learning pour le texte}
   \begin{itemize}[<+->]
-    \item \bluelink{https://allennlp.org/}{AllenNLP}
-    \item \bluelink{https://spacy.io/}{spaCy}
+    \item \bluelink{https://demo.allennlp.org/}{AllenNLP}
+    \item \bluelink{https://spacy.io/api}{spaCy}
   \end{itemize}
 \end{frame}
 
