--- a/shared/latex/neural-networks/optimize.tex
+++ b/shared/latex/neural-networks/optimize.tex
@@ -1,23 +1,27 @@
 \begin{frame}{Qu'est-ce qu'un hyper-paramètre~?}
-  \begin{minipage}[l]{0.49\linewidth}
-    \imgtw[0.9]{deep-net}
-  \end{minipage}\hfill
-  \begin{minipage}[l]{0.49\linewidth}
-    \begin{itemize}
-      \item Learning rate
-      \item Taille de batch
-      \item Nombre de couches
-      \item Taille des couches
-    \end{itemize}
-  \end{minipage}\hfill
+  \begin{columns}
+    \begin{column}[c]{0.5\textwidth}
+      \imgtw{neural-networks/deep-ff-notext}
+    \end{column}
+    \begin{column}[c]{0.5\textwidth}
+      \begin{itemize}
+        \item Learning rate
+        \item Taille de batch
+        \item Nombre de couches
+        \item Taille des couches
+      \end{itemize}
+    \end{column}
+  \end{columns}
 \end{frame}
 
 \begin{frame}{Learning rate}
-  \begin{minipage}[l]{0.49\linewidth}
-    \begin{center}trop grand\end{center}
+  \begin{minipage}{0.49\textwidth}
+    \centering
+    trop grand
   \end{minipage}\hfill
-  \begin{minipage}[l]{0.49\linewidth}
-    \begin{center}trop petit\end{center}
+  \begin{minipage}{0.49\linewidth}
+    \centering
+    trop petit
   \end{minipage}\hfill
 
   \imgtw{learning-rate-big-small}
