--- a/shared/latex/sequential-data/sequential-models.tex
+++ b/shared/latex/sequential-data/sequential-models.tex
@@ -10,23 +10,23 @@
   \end{itemize}
 \end{frame}
 
-\begin{frame}{Tâches~: prédiction d'une classe}
+\begin{frame}{Tâches --- Prédiction d'une classe}
   input : $x_i=(1,6,8,4)$
 
   output : positif ou négatif (cas binaire)
 
-  \begin{itemize}[<+->]
+  \begin{itemize}
     \item Son (chant d'oiseau, personne, genre musical, ...)
     \item Vidéos (film, documentaire, stand up , ...)
   \end{itemize}
 \end{frame}
 
-\begin{frame}{Tâches~: prédiction de la suite d'une séquence (one step)}
+\begin{frame}{Tâches --- Prédiction de la suite d'une séquence (one step)}
   input : $x_i=(1,2,3,4,5)$
 
   output : 6
 
-  \begin{itemize}[<+->]
+  \begin{itemize}
     \item Données Économiques
     \item Comportement Clients
     \item Météo
@@ -34,32 +34,35 @@
   \end{itemize}
 \end{frame}
 
-\begin{frame}{Tâches~: prédiction de la suite d'une séquence (multi step)}
+\begin{frame}{Tâches --- Prédiction de la suite d'une séquence (multi step)}
   input : $x_i=(1,2,3,4,5)$
 
   output : (6, 7, 8)
 
-  \begin{itemize}[<+->]
+  \begin{itemize}
     \item Traduction automatique
     \item Données Économiques
     \item Météo
   \end{itemize}
 \end{frame}
 
-\begin{frame}{Tâches~: génération}
+\begin{frame}{Tâches --- Génération}
   input : $x_1=(1,3,5),x_2=(7,9,11)$
 
   output : $(5,7,9)$
 
-  \begin{itemize}[<+->]
+  Quasi toujours conditionnée.
+
+  \begin{itemize}
+    \item Texte
+    \item Texte vers voix
+    \item Voix vers texte
     \item Génération de partitions
-    \item Texte vers Voix
-    \item Voix vers Texte
   \end{itemize}
 \end{frame}
 
-\begin{frame}{Tâches : découverte de Patterns}
-  \begin{itemize}[<+->]
+\begin{frame}{Tâches --- Découverte de Patterns}
+  \begin{itemize}
     \item Découverte de gènes
     \item Compression de signal
     \item Décrire et comprendre des phénomènes
