Fix Python code sample
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/shared/latex/tools/python.tex
+++ b/shared/latex/tools/python.tex
@@ -1,5 +1,4 @@
-\begin{frame}
-  \frametitle{Historique}
+\begin{frame}{Historique}
   \begin{description}
   \item[1989] Création du langage par Guido Van Russum
   \item[2001] Lancement de la Python Software Foundation
@@ -9,8 +8,7 @@
   \imgtw[0.8]{python_logo}
 \end{frame}
 
-\begin{frame}
-  \frametitle{Caractéristiques}
+\begin{frame}{Caractéristiques}
   Python est :
   \begin{description}[<+->]
   \item[Interprété] Et compilé à la volée, modules en C
@@ -21,8 +19,7 @@
   \end{description}
 \end{frame}
 
-\begin{frame}
-  \frametitle{Points forts/faibles}
+\begin{frame}{Points forts/faibles}
   \begin{minipage}[l]{0.49\linewidth}
     Atouts
     \begin{itemize}
@@ -45,8 +42,7 @@
   \end{minipage}\hfill
 \end{frame}
 
-\begin{frame}
-  \frametitle{Plateformes}
+\begin{frame}{Plateformes}
   Différents interpréteurs :
   \begin{itemize}
   \item Python/CPython $\Rightarrow$ C
@@ -55,8 +51,7 @@
   \end{itemize}
 \end{frame}
 
-\begin{frame}
-  \frametitle{Domaines}
+\begin{frame}{Domaines}
   Domaines d'applications :
   \begin{itemize}
   \item Web (Django ,Flask, ...)
@@ -68,10 +63,7 @@
   \end{itemize}
 \end{frame}
 
-\begin{frame}
-  \frametitle{Syntaxe}
+\begin{frame}{Syntaxe}
   Utilisation de l'indentation pour délimiter les blocs :
-  \inputminted[linenos,fontsize=\small,bgcolor=pythonbg]{python}{code/python-blocs.py}
-  \inputminted[linenos,fontsize=\small,bgcolor=returnbg]{python}{code/python-blocs.txt}
+  \mintedpy{python-blocs}
 \end{frame}
-
