Clean unused flavors and put questions in sections
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/formation.sty
+++ b/formation.sty
@@ -2,6 +2,7 @@
 
 \ProvidesPackage{formation}[2017/12/01 LaTeX class for my formations]
 
+\usepackage[export]{adjustbox}
 \usepackage{xparse}
 \usepackage{ifthen}
 \usepackage{amsmath}
