Use draft mode for all colab links
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/shared/latex/supervised/demo-svm.tex
+++ b/shared/latex/supervised/demo-svm.tex
@@ -1,6 +1,6 @@
 \begin{frame}
   \frametitle{SVM}
   \begin{center}
-    \bluelink{https://colab.research.google.com/drive/1qbf95qZj0rW0cSzfIXUDHGwe0KrTOe8f}{SVM Tutoriel}
+    \bluelink{https://colab.research.google.com/drive/1qbf95qZj0rW0cSzfIXUDHGwe0KrTOe8f\#forceEdit=true&sandboxMode=true}{SVM Tutoriel}
   \end{center}
 \end{frame}
