--- a/shared/latex/tools/notebooks.tex
+++ b/shared/latex/tools/notebooks.tex
@@ -11,6 +11,6 @@
   \frametitle{Démonstration}
   Une démonstration vaut mieux qu'un long discours !
 
-  \bluelink{https://colab.research.google.com/drive/1mL15RbN_Wo_sJPSuVTEqM5rcJe1A6ddz}{Jupyter Notebook Demo}
+  \bluelink{https://colab.research.google.com/drive/1mL15RbN_Wo_sJPSuVTEqM5rcJe1A6ddz\#forceEdit=true&sandboxMode=true}{Jupyter Notebook Demo}
 \end{frame}
 
