fix issues markov, activations, unsupervised, supervised, nn, ml, bda, mlb

--- a/shared/latex/neural-networks/intro.tex
+++ b/shared/latex/neural-networks/intro.tex
@@ -170,7 +170,7 @@
 
 \begin{frame}{Fonctions d'activation --- ReLU}
   \begin{center}
-    \imgtw{activations/relu}
+    \imgtw[0.6]{activations/relu}
   \end{center}
 
   \begin{description}[<+->]
