--- a/shared/latex/supervised/cost-error-function.tex
+++ b/shared/latex/supervised/cost-error-function.tex
@@ -6,7 +6,7 @@
     $\frac{1}{n}\sum_{i=[1..n]}\sqrt{( \hat{y_i} - y_i )^2}$
     \newline
   \end{center}
-  \underline{Critère des moindres carrés} :
+  \underline{Critère des moindres carrés (MSE)} :
   \begin{center}
     $\frac{1}{n}\sum_{i=[1..n]}( \hat{y_i} - y_i )^2$
   \end{center}
