--- a/shared/latex/supervised/hmm.tex
+++ b/shared/latex/supervised/hmm.tex
@@ -3,7 +3,7 @@
 
   Par exemple : diagnostic, capteur bruité, bourse, achats clients
 
-  \imgth[0.6]{hmm-model-weather}
+  \imgth[0.7]{markov/hmm}
 \end{frame}
 
 \begin{frame}{Définition}
@@ -21,7 +21,7 @@
   \begin{enumerate}[<+->]
   \item $O = \{beau,gris,pluie\}$ 
   \item $S =  [H, L]$
-  \item $\pi = [0.4, 0.6]$
+  \item $\pi = [0.7, 0.3]$
   \item $T$ est de taille $2 \times 2$ 
   \item $E$ est de taille $2\times 3$
   \end{enumerate}
