--- a/shared/latex/supervised/markov-model.tex
+++ b/shared/latex/supervised/markov-model.tex
@@ -1,6 +1,8 @@
 \begin{frame}{Markov Model}
-  \imgth[0.9]{markov}
+  \imgth[0.8]{markov/simple}
 \end{frame}
+
+
 
 \begin{frame}{Introduction}
   \begin{itemize}[<+->]
@@ -42,7 +44,7 @@
   \item Prédiction de classe : un modèle par classe
   \item Découverte de pattern
   \end{itemize}
-  \imgth[0.6]{markov}
+  \imgth[0.6]{markov/simple}
 \end{frame}
 
 \begin{frame}
@@ -53,5 +55,5 @@
   \item Thermodynamique
   \item Théorie des files d'attente (télécommunication)
   \end{itemize}
-  \imgth[0.6]{markov}
+  \imgth[0.6]{markov/simple}
 \end{frame}
