--- a/shared/latex/supervised/classification.tex
+++ b/shared/latex/supervised/classification.tex
@@ -20,20 +20,83 @@
   \newline
   \newline
   \underline{\textbf{Sortie :}}
-  \newline
+
   \begin{tabular}{|*{10}{c|}}
     \hline
-    0.0  & 0.1  & 0.4  & 0.0  & 0.0  & 0.2  & 0.1  & 0.0  & 0.2  & 0.0 \\
+    0.00  & 0.10  & 0.40  & 0.00  & 0.00  & 0.20  & 0.10  & 0.00  & 0.20  & 0.00 \\
     \hline
   \end{tabular}
   \newline
   \newline
   \underline{\textbf{Cible :}}
-  \newline
+
   \begin{tabular}{|*{10}{c|}}
     \hline
-    0.0  & 0.0  & \textbf{\red{1.0}}  & 0.0  & 0.0  & 0.0  & 0.0  & 0.0  & 0.0  & 0.0  \\
+    0.00  & 0.00  & \textbf{\red{1.00}}  & 0.00  & 0.00  & 0.00  & 0.00  & 0.00  & 0.00  & 0.00  \\
     \hline
   \end{tabular}
 \end{frame}
 
+\begin{frame}
+  \frametitle{Classification}
+  Critère des moindre carré (MSE) = 0.12
+  \newline
+  \newline
+  \newline
+  \underline{\textbf{Sortie :}}
+
+  \begin{tabular}{|*{10}{c|}}
+    \hline
+    0.00  & 0.10  & 0.40  & 0.00  & 0.00  & 0.20  & 0.10  & 0.00  & 0.20  & 0.00 \\ 
+    \hline
+  \end{tabular}
+  \newline
+  \newline
+  \underline{\textbf{Cible :}}
+
+  \begin{tabular}{|*{10}{c|}}
+    \hline
+    0.00  & 0.00  & \textbf{\red{1.00}}  & 0.00  & 0.00  & 0.00  & 0.00  & 0.00  & 0.00  & 0.00  \\
+    \hline
+  \end{tabular}
+\end{frame}
+
+
+\begin{frame}
+  \frametitle{Classification}
+  Critère des moindre carré (MSE) = 0.12
+  \newline
+  \newline
+  \newline
+  \underline{\textbf{Sortie :}}
+
+  \begin{tabular}{|*{10}{c|}}
+    \hline
+    0.12  & 0.12  & 0.88  & 0.12  & 0.12  & 0.12  & 0.12  & 0.12  & 0.12  & 0.12 \\ 
+    \hline
+  \end{tabular}
+  \newline
+  \newline
+  \underline{\textbf{Cible :}}
+
+  \begin{tabular}{|*{10}{c|}}
+    \hline
+    0.00  & 0.00  & \textbf{\red{1.00}}  & 0.00  & 0.00  & 0.00  & 0.00  & 0.00  & 0.00  & 0.00  \\
+    \hline
+  \end{tabular}
+\end{frame}
+
+
+\begin{frame}
+  \frametitle{Classification}
+  $\Rightarrow$ entropie croisée entre la sortie et la cible : 
+  \[
+    \mathrm{H}(p,q)=-\sum_{x}p(x)\log q(x)
+  \]
+
+  \begin{itemize}[<+->]
+    \item minimale quand sortie = cible
+    \item prend en compte la distribution de la sortie
+  \end{itemize}
+    
+\end{frame}
