--- a/shared/latex/about/ressources-eni.tex
+++ b/shared/latex/about/ressources-eni.tex
@@ -1,3 +1,3 @@
 \begin{frame}{Ressources}
-  Les supports utilisées vous seront remis à chaque début de cours.
+  Les supports utilisés vous seront remis à chaque début de cours.
 \end{frame}
