Add geneve intra stuff
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/orsys/INTRA/2021-01-geneve/j1/about/description.tex
+++ b/orsys/INTRA/2021-01-geneve/j1/about/description.tex
@@ -1,13 +1,10 @@
 
-\begin{frame}{Description}
-  Cette formation aborde les points non couverts par la dernière formation : le deep learning, le déploiement et git ainsi que des travaux pratiques sur la détection d'anomalie.
-\end{frame}
-
 \begin{frame}{Prérequis}
   \begin{itemize}
   \item Connaissances de base en statistiques
   \item Connaissances de base en python
   \item Avoir un \textbf{compte Google} afin de pouvoir faire les TPs dans \bluelink{https://colab.research.google.com/notebooks/welcome.ipynb}{Google Colaboratory}
+  \item Avoir un \textbf{compte GitHub} pour expérimenter avec \texttt{git}
   \end{itemize}
 \end{frame}
 
@@ -16,23 +13,6 @@
   \item Comprendre les fondamentaux du deep learning
   \item Identifier les méthodes d'apprentissage pertinentes pour résoudre un problème
   \item Savoir mettre en production un modèle
-  \item Manipuler les méthodes de détection d'anomalie
   \item Comprendre la gestion de code source par git
   \end{itemize}
-\end{frame}
-
-\begin{frame}{Programme}
-
-  \begin{description}
-    \item[Jour 1]
-      \begin{itemize}
-        \item Deep learning
-      \end{itemize}
-    \item[Jour 2]
-      \begin{itemize}
-        \item Introduction à git
-        \item Ingénierie en machine learning
-        \item Techniques de déploiement
-      \end{itemize}
-  \end{description}
 \end{frame}
