--- a/formation.sty
+++ b/formation.sty
@@ -18,6 +18,7 @@
 \usepackage{bm}
 \usepackage{soulutf8}
 \usepackage{stmaryrd}
+\usepackage{caption}
 \usepackage{tikz}
 \usepackage[french]{babel}
 
@@ -30,6 +31,8 @@
 \setbeamertemplate{bibliography item}{\insertbiblabel}
 \setbeamertemplate{blocks}[rounded]
 \setbeamercovered{transparent}
+
+\captionsetup[figure]{labelformat=empty}
 
 \makeatletter
 \setlength{\metropolis@frametitle@padding}{1.9ex}% <- default 2.2 ex
@@ -108,41 +111,56 @@
 
 \newcommand{\vect}[1]{\bm{\mathbf{#1}}}
 
-\newcommand{\imgtw}[2][1]{%
+\newcommand{\figurecaption}[1]{{\scriptsize\textcolor{gray}{#1}}}
+
+\NewDocumentCommand\imgtw{ O{1} o m }{%
   \begin{figure}%
     \centering%
-    \includegraphics[width=#1\textwidth]{#2}%
+    \includegraphics[width=#1\textwidth]{#3}%
+    \IfNoValueF{#2}{\caption{\figurecaption{#2}}}%
   \end{figure}%
 }
-\newcommand{\imgth}[2][1]{%
+
+\NewDocumentCommand\imgth{ O{1} o m }{%
   \begin{figure}%
     \centering%
-    \includegraphics[height=#1\textheight]{#2}%
+    \includegraphics[height=#1\textheight]{#3}%
+    \IfNoValueF{#2}{\caption{\figurecaption{#2}}}%
   \end{figure}%
 }
-\newcommand{\imgcmw}[2]{
+
+\NewDocumentCommand\imgcmw{ O{1} o m }{%
   \begin{figure}%
     \centering%
-    \includegraphics[width=#1cm]{#2}%
+    \includegraphics[width=#1cm]{#3}%
+    \IfNoValueF{#2}{\caption{\figurecaption{#2}}}%
   \end{figure}%
 }
-\newcommand{\imgcmh}[2]{
+
+\NewDocumentCommand\imgcmh{ O{1} o m }{%
   \begin{figure}%
     \centering%
-    \includegraphics[height=#1cm]{#2}%
+    \includegraphics[height=#1cm]{#3}%
+    \IfNoValueF{#2}{\caption{\figurecaption{#2}}}%
   \end{figure}%
 }
-\newcommand{\img}[1]{
+
+\NewDocumentCommand\img{ o m }{%
   \begin{figure}%
     \centering%
-    \includegraphics{#1}%
+    \includegraphics{#2}%
+    \IfNoValueF{#1}{\caption{\figurecaption{#1}}}%
   \end{figure}%
 }
-\newcommand{\imgtwl}[2][1]{%
+
+\NewDocumentCommand\imgtwl{ O{1} o m }{%
   \begin{figure}%
-    \includegraphics[width=#1\textwidth,left]{#2}%
+    \centering%
+    \includegraphics[width=#1\textwidth,left]{#3}%
+    \IfNoValueF{#2}{\caption{\figurecaption{#2}}}%
   \end{figure}%
 }
+
 \newcommand{\mintedpy}[1]{%
   \inputminted[fontsize=\scriptsize,bgcolor=pythonbg,framesep=1mm]{python}{code/#1.py}%
   \vspace{-1cm}%
@@ -174,7 +192,7 @@
 \newcommand\purple[1]{\textcolor{purple}{#1}}
 \newcommand\smallgray[1]{\textcolor{gray}{\footnotesize\it #1}}
 
-\DeclareDocumentCommand\question{ m g }{%
+\DeclareDocumentCommand\question{ m o }{%
   {\alert{#1}%
     \ifnum\value{beamerpauses}=1
       \setcounter{beamerpauses}{2}
