Add caption to biological neuron
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/shared/latex/neural-networks/intro.tex
+++ b/shared/latex/neural-networks/intro.tex
@@ -11,7 +11,7 @@
 \end{frame}
 
 \begin{frame}{Lien (ténu) avec la biologie}
-  \imgtw[0.9]{biological-neuron}
+  \imgtw[0.9][Diagram of a Neuron, Wikimedia Commons User:Dhp1080, CC BY-SA 3.0]{biological-neuron}
 \end{frame}
 
 \begin{frame}{Modélisation d'un neurone}
